# alsa-snap-test

./: .gitignore  Makefile.am  README.md  configure.ac  snapcraft.yaml
alsa/: Makefile.am  devices.c  devices.h
main/: Makefile.am  main.vala
pkg/: alsa.vapi  picasteralsa.vapi
